--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
           <li><a href="#Brushes">Brushes</a></li>
           <li><a href="#Frames">Frames</a></li>
           <li><a href="#Paint">Paint</a></li>
+          <li><a href="#use your hands">Use your hands</a></li>
+
         </ul>
       </nav>
     </header>
